pfish       2005/10/06 02:46:19 UTC	(20051006-2663)
  Log:
  tell a user whos online when another user forwards them a memo
  

  Changes:	Modified:
  +6 -0		trunk/modules/memoserv/forward.c (File Modified) 


pfish       2005/10/06 02:38:29 UTC	(20051006-2661)
  Log:
  Tell a user thats online when they get a new memo.
  

  Changes:	Modified:
  +9 -1		trunk/modules/memoserv/send.c (File Modified) 


pfish       2005/10/06 02:24:51 UTC	(20051006-2659)
  Log:
  fix a crash here when user isn't ID'ed
  

  Changes:	Modified:
  +10 -11	trunk/modules/memoserv/forward.c (File Modified) 


kog         2005/10/06 01:58:46 UTC	(20051006-2657)
  Log:
  fixed strncasecmp in delete, make sure target isn't sender on forward/send, inbox full equality test fix
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/delete.c (File Modified) 
  +9 -1		trunk/modules/memoserv/forward.c (File Modified) 
  +10 -3	trunk/modules/memoserv/send.c (File Modified) 


pfish       2005/10/06 01:44:50 UTC	(20051006-2655)
  Log:
  fix module header (this is not memoserv/read)
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/forward.c (File Modified) 


pfish       2005/10/06 01:41:35 UTC	(20051006-2653)
  Log:
  don't allow a user to forward to another user with nomemo enabled
  

  Changes:	Modified:
  +10 -0	trunk/modules/memoserv/forward.c (File Modified) 


pfish       2005/10/06 01:27:38 UTC	(20051006-2651)
  Log:
  Don't allow memos to be sent to users with the NOMEMO flag set.
  

  Changes:	Modified:
  +10 -0	trunk/modules/memoserv/send.c (File Modified) 


pfish       2005/10/06 01:21:00 UTC	(20051006-2649)
  Log:
  Add NOMEMO flag to NickServ/SET --
  MemoServ will not allow users to send memos to users with nomemo enabled.
  

  Changes:	Modified:
  +1 -0		trunk/include/account.h (File Modified) 
  +54 -0	trunk/modules/nickserv/set.c (File Modified) 


kog         2005/10/06 01:20:29 UTC	(20051006-2647)
  Log: