@@ -1,3 +1,12 @@
+pfish       2005/10/06 02:52:48 UTC	(20051006-2665)
+  Log:
+  small format fix on the memo list making it a bit easier to parse
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/modules/memoserv/list.c (File Modified) 
+
+
 pfish       2005/10/06 02:46:19 UTC	(20051006-2663)
   Log:
   tell a user whos online when another user forwards them a memo
